@startuml Proxy
class Subject {
    + request()
}

class RealSubject {
    + request()
}

class Proxy {
    - real_subject: RealSubject
    + __construct(real_subject: RealSubject)
    + request()
    + check_access(): bool
    + log_access()
}

Subject <|.. RealSubject
Subject <|.. Proxy

RealSubject -- Proxy: "1" "1"
@enduml
